# web-index

./: .copier-answers.yml  .gitignore  .releaserc.yaml  Cargo.toml  Dockerfile  README.md  default.nix  docker-bake.hcl  flake.nix
.github/workflows/: check.yml  release.yml
src/: data.rs  domain.rs  insert.rs  io.rs  lib.rs  main.rs  path.rs  query.rs  retrieve.rs
standard/v0.1.0/: standard.md
