[package]
name = "web-index"
version = "1.0.0"
edition = "2021"

# MSRV
rust-version = "1.74.0"

[dependencies]
anyhow = "1.0.89"
bytes = { version = "1.7.2", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
# polars = { version = "0.43.1", features = ["parquet", "dtype-u8", "dtype-u16"] }
polars = { version = "0.36.2", features = ["dtype-u8", "dtype-u16", "dtype-struct", "parquet", "nightly"]} # consider manual flags to avoid e.g. polars-sql
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tldextract-rs = "0.1.1"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
